added database and connector classes