@@ -10,8 +10,11 @@ repositories {
 }
 
 dependencies {
-    implementation project(':swing-kit')
     implementation project(':retail-core')
+    // Source: https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+    implementation 'org.xerial:sqlite-jdbc:3.51.3.0'
+
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -19,4 +22,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-native-access=ALL-UNNAMED"
 }
